<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Transfer</string>
    <string name="menu_new">Add</string>
    <string name="menu_config">Config</string>
    <string name="menu_pendencia">Pendências</string>
    <string name="menu_log">Log</string>
    <string name="assinaturaMethodJs">function exec(sms){ %s }</string>
    <string name="title_activity_advanced_rule">AdvancedRuleActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="smsTest">exec(\"Ta Eu quero ser muito rica Ou Eu adoraria socar meu namorado\");</string>
    <string name="title_activity_detail_rule">Detalhes da Regra</string>
    <string name="title_activity_rule_form">Criar uma Rule</string>
    <string name="title_activity_rule_history">Historico de Regras</string>
    <string name="title_activity_rule_pends">Regras Pendentes</string>
    <string name="title_activity_config">Cofiguração</string>
    <string name="nome_regra">Nome Regra</string>
    <string name="aplicar_regex">Aplicar Regex no corpo do sms</string>
    <string name="aplicar_contact">Quando o remetente for um contato</string>
    <string name="oque_fazer_filtro">O que fazer quando filtro for valido?</string>
    <string name="enviar_email">Enviar por email</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_apagar">Apagar</string>
    <string name="btn_modo_avancado">Modo Avançado</string>
    <string name="txt_notifySmsAccept">Notificar quando um sms cair em uma regra.</string>
    <string name="txt_notifyExecuteAction">Notificar quando uma regra for aplicada com sucesso.</string>
    <string name="txt_activeSystemOnStart">Ativar o sistema ao ligar o celular.</string>
    

</resources>