<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RuleFormActivity"
    android:orientation="vertical" >

    
    <LinearLayout android:layout_width="match_parent"
    			  android:layout_height="wrap_content"
    			  android:orientation="vertical">
    
    <TextView android:layout_width="match_parent"
        	      android:layout_height="wrap_content" 
        		  android:text="@string/nome_regra"
        		  style="@style/label"/>
    
    
     <EditText android:id="@+id/edtNomeRegra" 
               android:inputType="text" 
               android:layout_width="match_parent"
        	   android:layout_height="wrap_content"/>
    
    <LinearLayout android:orientation="horizontal"
        		  android:layout_width="match_parent"
    			  android:layout_height="wrap_content"
    			  >
    	
    	<TextView android:layout_width="wrap_content"
        	      android:layout_height="match_parent" 
        		  android:text="@string/aplicar_regex"
        		  style="@style/label"/>

    	<CheckBox android:id="@+id/chbEnabledRegex"
    	    	    android:layout_width="wrap_content"
    	    android:layout_height="match_parent"
    	     />
    
    </LinearLayout>
    
    <EditText android:id="@+id/edtRegex"
        		android:inputType="text"
                android:layout_width="match_parent"
        	     android:layout_height="wrap_content"/>
    
    <LinearLayout android:orientation="horizontal"
        		  android:layout_width="match_parent"
    			  android:layout_height="wrap_content"
    			  >
    	
    	<TextView android:layout_width="wrap_content"
        	      android:layout_height="match_parent" 
        		  android:text="@string/aplicar_contact"
        		  style="@style/label"/>

    	<CheckBox android:id="@+id/chbEnabledContact"
    	    android:layout_width="wrap_content"
    	    android:layout_height="match_parent"
    	    />
    
    </LinearLayout>
    
    <EditText android:id="@+id/edtContato" 
        	  android:inputType="text"
        	  android:layout_width="match_parent"
        	  android:layout_height="wrap_content"/>
    
    <TextView android:layout_width="match_parent"
        	      android:layout_height="wrap_content" 
        		  android:text="@string/oque_fazer_filtro"
        		  style="@style/label"/>
    
    
    
    <LinearLayout android:orientation="horizontal"
        		  android:layout_width="match_parent"
    			  android:layout_height="wrap_content"
    			  >
    	
    	<TextView android:layout_width="wrap_content"
        	      android:layout_height="match_parent" 
        		  android:text="@string/enviar_email"
        		  style="@style/label"/>

    	<CheckBox android:id="@+id/chbEnabledEmail"
    	    
    	    android:layout_width="wrap_content"
    	    android:layout_height="match_parent"
    	    />
    
    </LinearLayout>
    <EditText  android:id="@+id/edtEmail"
        			android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
        	      android:layout_height="wrap_content"/>
    
    <Button android:id="@+id/btnModoAvancado"
        	android:text="@string/btn_modo_avancado"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout android:gravity="bottom"
        			android:layout_width="match_parent"
    			  android:layout_height="wrap_content"
    			  android:orientation="horizontal">
    	
   		 <Button android:id="@+id/btnSalvar"
        	android:text="@string/btn_salvar"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" />
    
    	<Button android:id="@+id/btnApagar"
    	    
        	android:text="@string/btn_apagar"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>

