<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

	<LinearLayout
	    	android:layout_height="40dp" 
	    	android:layout_width="match_parent" 
	    	android:orientation="horizontal">
	    	
	    <ImageButton android:id="@+id/btnAdd" 
	         android:src="@drawable/add"
	         android:layout_width="wrap_content"
	        android:layout_height="match_parent" 
	        android:contentDescription="@string/menu_new"/>
	    
	    <ImageButton android:id="@+id/btnHistory"
	        android:src="@drawable/history"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent" 
	        android:contentDescription="@string/menu_log"/>
	    
	    <ImageButton android:id="@+id/btnPends" 
	        android:src="@drawable/pends"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:contentDescription="@string/menu_pendencia"
	        />
	    <ImageButton android:id="@+id/btnConfig"
	        android:src="@drawable/config"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:contentDescription="@string/menu_config"/>
	    
	</LinearLayout >
	<ListView
        android:id="@+id/listViewRule"
        android:layout_width="match_parent"
        android:layout_height="249dp" >

    </ListView>
    
</LinearLayout>