<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfigActivity"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	
    	<TextView
        	android:id="@+id/txtNotifySmsAccept"
        	android:layout_width="150dp"
        	android:layout_height="wrap_content"
        	android:text="@string/txt_notifySmsAccept" />

    		<ToggleButton
    		    android:id="@+id/btnNotifySmsAccept"
    		    android:layout_width="95dp"
    		    android:layout_height="wrap_content"
    		    android:textOff="Desligar"
    		    android:textOn="Ligar" />
	
	</LinearLayout>
	
    
    <LinearLayout android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:orientation="horizontal">	
    	<TextView
        	android:id="@+id/txtNotifyExecuteAction"
        	android:layout_width="150dp"
        	android:layout_height="wrap_content"
        	android:text="@string/txt_notifyExecuteAction" />

    		<ToggleButton
    		    android:id="@+id/btnNotifyExecuteAction"
    		    android:layout_width="95dp"
    		    android:layout_height="wrap_content"
    		    android:textOff="Desligar"
    		    android:textOn="Ligar" />
	
	</LinearLayout>
	
    <LinearLayout android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:orientation="horizontal">	
    	<TextView
        	android:id="@+id/txtActiveSystemOnStart"
        	android:layout_width="150dp"
        	android:layout_height="wrap_content"
        	android:text="@string/txt_activeSystemOnStart" />

    		<ToggleButton
    		    android:id="@+id/btnActiveSystemOnStart"
    		    android:layout_width="95dp"
    		    android:layout_height="wrap_content"
    		    android:textOff="Desligar"
    		    android:textOn="Ligar" />
	
	
	</LinearLayout>
    
</LinearLayout>